# personal-assystent

./:  .gitignore  .pylintrc  README.md  __init__.py  addressbook.pkl  commands.py  contacts.pkl  data.py  error_handlers.py  main.py  notes.py  notes_data.pkl  parser.py  pull_request_list.txt  pyproject.toml  requirements.txt  storage.py
Address_book/: address_book.py  book.py  fields.py  notes.py  record.py
Personal_assystent/: __init__.py  addressbook.pkl  commands.py  main.py  storage.py
Personal_assystent/Address_book/: address_book.py  fields.py  record.py
contacts/: __init__.py  book.py  fields.py  handler.py  models.py  record.py
notebook/: __init__.py  note_handler.py  notes.py
