[tool.poetry]
name = "personal-assystent"
version = "0.1.0"
description = "CLI додаток-помічник для роботи з контактами і нотатками"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
colorama = "^0.4.6"

# Стандартні бібліотеки не вказуються тут:
# difflib, sys, os, re, pickle, datetime, json, shlex

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
